--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -60,7 +60,39 @@ The predictor variables that we consider here are comprised of two types: contin
 
 A categorical variable $X_j, j \in J_{cat}$ takes as its value only one of a finite number of labels. Let the set of labels be $\mathcal{P}^j = \{p^j_1, p^j_2,\dots, p^j_{n_{\mathcal{P}^j}} \}$, where $n_\mathcal{P}^j = |\mathcal{P}^j|$ is the cardinality or number of levels, in $\mathcal{P}^j$. One-hot encoding maps each value $x_{i,j}$ of $X_j$ to $n_\mathcal{P}^j$ indicator variables, which take a value of $1$ if the label of $x_{i,j}$ corresponds to the level of the indicator variable, and $0$ otherwise.
 
-# Modelling the NFIP Data {#modelling}
+# A Minimalist Neural Network {#modelling}
+
+In this section, we describe, fit, and evaluate both a minimalist neural network architecture utilizing embeddings and a traditional GLM. The working example for our experiments is as follows: Given a set of claims characteristics, we predict the losses paid on the property coverage of the policy. In the rest of this section, we describe the dataset we use, describe formally the models being considered, and discuss results.
+
+## NFIP data
+
+The data we use comes from the National Flood Insurance Program (NFIP) and is made available by the OpenFEMA initiative of the Federal Emergency Management Agency (FEMA) (TODO: cite). Two datasets are made available by OpenFEMA: A policies dataset with exposure information, and a claims dataset with claims transactions, including paid amounts. Because there is no way to associate records of the two datasets, we are limited to fitting severity models on the claims dataset. While the complete dataset contains over two million transactions, for the purposes of our experiments we limit ourselves to data from 2000 to August 2019, which amounts to approximately 1.4 million claims. The dataset can be downloaded from Cellar (TODO: link). The dataset includes a rich variety of variables, from occupancy type to coarse coordinates. For our models, we work with a few selected variables that represent continuous and discrete variables of low and high cardinalities, which we list in Table \ref{tab:variables}.
+
+| Variable                                 | Type                                     |
+|------------------------------------------|------------------------------------------|
+| Building insurance coverage              | Numeric                                  |
+| Basement enclosure type                  | Categorical                              |
+| Number of floors in the insured building | Categorical (binned in original dataset) |
+| Flood zone                               | Categorical (high cardinality)           |
+| Primary residence                        | Categorical (binary indicator)           |
+
+: \label{tab:variables} Variables used in modeling.
+
+## Severity GLM
+
+asdf
+
+## Neural net
+
+asdf
+
+## Performance evaluation framework and results
+
+asdf
+
+# Interpretations {#interpretation}
+
+Extracting and interpreting trained embeddings, including visualization techniques Can we explain the learned embeddings using a GLM? distance to water etc Rainfall Density Distance to coast
 
 # Transfer Learning {#tl}
 
@@ -73,10 +105,6 @@ Investigate approaches for using embedding layers for numeric variables, or nume
 # Attention based modelling {#attention}
 
 Can we get some lift by adding attention layers? TabNet model Transformer model
-
-# Interpretations {#interpretation}
-
-Extracting and interpreting trained embeddings, including visualization techniques Can we explain the learned embeddings using a GLM? distance to water etc Rainfall Density Distance to coast
 
 # Conclusions {#Conclusions}
 
