--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -13,6 +13,19 @@ title = {{Smoothing methods for the analysis of  mortality development}},
 url = {https://docs.google.com/viewerng/viewer?url=e-archivo.uc3m.es/bitstream/handle/10016/5133/ThesisCAMARDA.pdf},
 year = {2008}
 }
+
+@article{Klinker2011,
+abstract = {GLMs that include explanatory classification variables with sparsely populated levels assign large standard errors to these levels but do not otherwise shrink estimates toward the mean in response to low credibility. Accordingly, actuaries have attempted to superimpose credibility on a GLM setting, but the resulting methods do not appear to have caught on. The Generalized Linear Mixed Model (GLMM) is yet another way of introducing credibility-like shrinkage toward the mean in a GLM setting. Recently available statistical software, such as SAS PROC GLIMMIX, renders these models more readily accessible to actuaries. This paper offers background on GLMMs and presents a case study displaying shrinkage towards the mean very similar to Buhlmann-Straub credibility. Keywords:},
+author = {Klinker, Fred},
+number = {1},
+pages = {1--25},
+title = {{Generalized Linear Mixed Models for Ratemaking: A Means of Introducing Credibility into a Generalized Linear Model Setting}},
+url = {http://scholar.google.com/scholar?hl=en{\&}btnG=Search{\&}q=intitle:Generalized+Linear+Mixed+Models+for+Ratemaking+:+A+Means+of+Introducing+Credibility+into+a+Generalized+Linear+Model+Setting{\#}0},
+volume = {2},
+year = {2010}
+}
+
+
 @article{kelliher_wilmot_vij_klumpes_2013,
 abstract = {Risk terminology varies from organisation to organisation, and actuaries working in different organisations may use different terms to refer to the same risk, or use the same nomenclature for completely different risks. This paper sets out a classification system developed by the Risk Classification Working Party for the Profession that can be used as a common reference point for discussing risk. Actuaries will not be required to use this system, but it is hoped that common terminology will reduce the possibility of confusion in discussing risks.},
 author = {Kelliher, P. O. J. and Wilmot, D. and Vij, J. and Klumpes, P. J. M.},
