--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -322,9 +322,8 @@ procedure.
 ## Problem Description and Data
 
 The working example for our experiments is as follows: Given a set of claim characteristics, we predict the losses paid 
-on the property coverage of the policy.
-
-The data we use comes from the National Flood Insurance Program (NFIP) and is made available by the OpenFEMA initiative 
+on the property coverage of the policy. The data we use comes from the National Flood Insurance Program (NFIP) and is 
+made available by the OpenFEMA initiative 
 of the Federal Emergency Management Agency (FEMA)[^9]. Two datasets are made available by OpenFEMA: A policies dataset 
 with exposure information, and a claims dataset with claims transactions, including paid amounts. Because there is no 
 way to associate records of the two datasets, we are limited to fitting severity models on the claims dataset. While the 
@@ -342,7 +341,9 @@ library(magrittr)
 variables <- tibble::tribble(
   ~Variable, ~Type,
   "Building insurance coverage", "Numeric",
+  "Community Rating System Discount", "Numeric",
   "Basement enclosure type", "Categorical",
+  "Occupancy Type", "Categorical",
   "Number of floors in the insured building", "Categorical (binned in original dataset)",
   "Flood zone", "Categorical (high cardinality)",
   "Primary residence", "Categorical (binary indicator)"
@@ -358,11 +359,13 @@ knitr::kable(
   kableExtra::kable_styling(latex_options = "hold_position")
 ```
 
+The response variable we take from the dataset is "Amount Paid on Building Claim", which is a numeric variable.
+
 ## Models
 
 1. A GLM with gamma distribution and log link function
 2. A linear model with categorical embeddings and an exponential output activation
-3. A GLM with the categorical predictors replaced by the trained embeddings from Model 2.
+3. A GLM with the categorical predictors replaced by the trained embeddings from Model 2
 4. A multilayer perceptron regression model
 
 ### Model 1: Simple GLM 
